# TicketMachine

./: CMakeLists.txt  README.md  conanfile.txt
include/: Client.hpp  Server.hpp  Ticket.hpp
src/: Client.cpp  Server.cpp  client_main.cpp  server_main.cpp
